update to zuri-form

--- a/index.html
+++ b/index.html
@@ -8,45 +8,90 @@
   </head>
   <body>
     <div class="form-background">
-      <div class="card-heading">
-        <div style="display: flex; justify-content: space-between; gap: 100px;">
-          <h3>hello</h3>
-          <p>hi</p>
-        </div>
-        <div style="display: flex; justify-content: space-between; gap: 100px;">
-          <h3>hello</h3>
-          <p>hi</p>
-        </div>
-      </div>
-      <form class="input-background">
-        <div class="card-number">
-          <h6>CARD NUMBER</h6>
-          <div class="card-number_box">
-            <input type="text" name="" id="" />
-            <input type="text" name="" id="" />
-            <input type="text" name="" id="" />
-            <input type="text" name="" id="" />
-          </div>
-        </div>
-        <div class="card-holder">
-          <h6>CARD HOLDER</h6>
-          <input type="text" name="" id="" />
-        </div>
-        <div class="expiration">
-          <h6>EXPIRATION DATE</h6>
-          <div class="expiration-box">
-            <div style="display: flex;">
-              <input type="date" name="" id="" />
-              <input type="date" name="" id="" />
+        <div class="desktop-view">
+            <div class="card-heading">
+                <div style="display: flex; justify-content: space-between; gap: 100px;">
+                  <h3>hello</h3>
+                  <p>hi</p>
+                </div>
+                <div style="display: flex; justify-content: space-between; gap: 100px;">
+                  <h3>hello</h3>
+                  <p>hi</p>
+                </div>
+              </div>
+          <form class="input-background">
+            <div class="card-number">
+              <h6>CARD NUMBER</h6>
+              <div class="card-number_box">
+                <input type="text" name="" id="" />
+                <input type="text" name="" id="" />
+                <input type="text" name="" id="" />
+                <input type="text" name="" id="" />
+              </div>
             </div>
-            <div class="cvv">
-              <h6>CVV</h6>
+            <div class="card-holder">
+              <h6>CARD HOLDER</h6>
               <input type="text" name="" id="" />
             </div>
-          </div>
+            <div class="expiration">
+              <h6>EXPIRATION DATE</h6>
+              <div class="expiration-box">
+                <div style="display: flex;">
+                  <input type="date" name="" id="" />
+                  <input type="date" name="" id="" />
+                </div>
+                <div class="cvv">
+                  <h6>CVV</h6>
+                  <input type="text" name="" id="" />
+                </div>
+              </div>
+            </div>
+            <input type="submit" value="SUBMIT" style="width: 200px;
+            height: 30px; margin: auto;">
+          </form>
         </div>
-        <input type="submit" value="">
-      </form>
+        <div class="mobile-view">
+            <div class="card-heading">
+                <div style="display: flex; justify-content: space-between; gap: 100px;">
+                  <h3>hello</h3>
+                  <p>hi</p>
+                </div>
+                <div style="display: flex; justify-content: space-between; gap: 100px;">
+                  <h3>hello</h3>
+                  <p>hi</p>
+                </div>
+              </div>
+          <form class="input-background">
+            <div class="card-number">
+              <h6>CARD NUMBER</h6>
+              <div class="card-number_box">
+                <input type="text" name="" id="" />
+                <input type="text" name="" id="" />
+                <input type="text" name="" id="" />
+                <input type="text" name="" id="" />
+              </div>
+            </div>
+            <div class="card-holder">
+              <h6>CARD HOLDER</h6>
+              <input type="text" name="" id="" />
+            </div>
+            <div class="expiration">
+              <h6>EXPIRATION DATE</h6>
+              <div class="expiration-box">
+                <div style="display: flex;">
+                  <input type="date" name="" id="" />
+                  <input type="date" name="" id="" />
+                </div>
+                <div class="cvv">
+                  <h6>CVV</h6>
+                  <input type="text" name="" id="" />
+                </div>
+              </div>
+            </div>
+            <input type="submit" value="SUBMIT" style="width: 200px;
+            height: 30px; margin: auto;">
+          </form>
+        </div>
     </div>
   </body>
   <script src="./index.js"></script>
