update to zuri-cdt

--- a/index.html
+++ b/index.html
@@ -10,23 +10,32 @@
     <div class="form-background">
         <div class="desktop-view">
             <div class="card-heading">
-                <div style="display: flex; justify-content: space-between; gap: 100px;">
-                  <h3>hello</h3>
-                  <p>hi</p>
+                <div style="display: flex; justify-content: space-between; gap: 100px; margin-top: 10px;">
+                  <div style="border:7px solid gray; border-radius:10px; width:100px; height:60px;">
+                <div style=" padding:25px 20px; 
+                 background-color:rgb(71, 66, 66); border-radius: 10px;"></div>
+                </div>
+                  <p style="font-size:50px; color: white; position: relative; bottom: 7px;">VISA</p>
+                  <div class="master-card">
+                    <p>MASTER</p>
+                  </div>
+                  <div class="american-card">
+                    <p>AMERICAN </p>
+                  </div>
                 </div>
                 <div style="display: flex; justify-content: space-between; gap: 100px;">
-                  <h3>hello</h3>
-                  <p>hi</p>
+                  <h3>BADMUS .A.</h3>
+                  <p>EXPIRES 11/99</p>
                 </div>
               </div>
           <form class="input-background">
             <div class="card-number">
               <h6>CARD NUMBER</h6>
               <div class="card-number_box">
-                <input type="text" name="" id="" />
-                <input type="text" name="" id="" />
-                <input type="text" name="" id="" />
-                <input type="text" name="" id="" />
+                <input type="text" name="" id="" aria-required=""/>
+                <input type="text" name="" id="" aria-required="true" />
+                <input type="text" name="" id="" aria-required="true"/>
+                <input type="text" name="" id="" aria-required="true"/>
               </div>
             </div>
             <div class="card-holder">
@@ -36,7 +45,7 @@
             <div class="expiration">
               <h6>EXPIRATION DATE</h6>
               <div class="expiration-box">
-                <div style="display: flex;">
+                <div style="display: flex; gap: 15px;">
                   <input type="date" name="" id="" />
                   <input type="date" name="" id="" />
                 </div>
@@ -46,8 +55,9 @@
                 </div>
               </div>
             </div>
-            <input type="submit" value="SUBMIT" style="width: 200px;
-            height: 30px; margin: auto;">
+            <input type="submit" value="SUBMIT" style=" padding:10px 150px;
+            margin: auto; font-family: cursive; border: 2px solid gray;
+            border-radius: 5px; background-color:brown; color: white; cursor: pointer;">
           </form>
         </div>
         <div class="mobile-view">
