--- a/index.html
+++ b/index.html
@@ -5,103 +5,246 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card validation</title>
     <link rel="stylesheet" href="./index.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <div class="form-background">
-        <div class="desktop-view">
-            <div class="card-heading">
-                <div style="display: flex; justify-content: space-between; gap: 100px; margin-top: 10px;">
-                  <div style="border:7px solid gray; border-radius:10px; width:100px; height:60px;">
-                <div style=" padding:25px 20px; 
-                 background-color:rgb(71, 66, 66); border-radius: 10px;"></div>
-                </div>
-                  <p style="font-size:50px; color: white; position: relative; bottom: 7px;">VISA</p>
-                  <div class="master-card">
-                    <p>MASTER</p>
-                  </div>
-                  <div class="american-card">
-                    <p>AMERICAN </p>
-                  </div>
-                </div>
-                <div style="display: flex; justify-content: space-between; gap: 100px;">
-                  <h3>BADMUS .A.</h3>
-                  <p>EXPIRES 11/99</p>
-                </div>
-              </div>
-          <form class="input-background">
-            <div class="card-number">
-              <h6>CARD NUMBER</h6>
-              <div class="card-number_box">
-                <input type="text" name="" id="" aria-required=""/>
-                <input type="text" name="" id="" aria-required="true" />
-                <input type="text" name="" id="" aria-required="true"/>
-                <input type="text" name="" id="" aria-required="true"/>
-              </div>
+      <div class="desktop-view">
+        <div class="card-heading">
+          <div
+            style="
+              display: flex;
+              justify-content: space-between;
+              gap: 100px;
+              margin-top: 10px;
+            "
+          >
+            <div
+              style="
+                border: 7px solid gray;
+                border-radius: 10px;
+                width: 100px;
+                height: 60px;
+              "
+            >
+              <div
+                style="
+                  padding: 25px 20px;
+                  background-color: rgb(71, 66, 66);
+                  border-radius: 10px;
+                "
+              ></div>
             </div>
-            <div class="card-holder">
-              <h6>CARD HOLDER</h6>
-              <input type="text" name="" id="" />
+            <p
+              style="
+                font-size: 50px;
+                color: white;
+                position: relative;
+                bottom: 7px;
+              "
+            >
+              VISA
+            </p>
+            <div class="master-card">
+              <p>MASTER</p>
             </div>
-            <div class="expiration">
-              <h6>EXPIRATION DATE</h6>
-              <div class="expiration-box">
-                <div style="display: flex; gap: 15px;">
-                  <input type="date" name="" id="" />
-                  <input type="date" name="" id="" />
-                </div>
-                <div class="cvv">
-                  <h6>CVV</h6>
-                  <input type="text" name="" id="" />
-                </div>
-              </div>
+            <div class="american-card">
+              <p>AMERICAN</p>
             </div>
-            <input type="submit" value="SUBMIT" style=" padding:10px 150px;
-            margin: auto; font-family: cursive; border: 2px solid gray;
-            border-radius: 5px; background-color:brown; color: white; cursor: pointer;">
-          </form>
+          </div>
+          <div
+            style="display: flex; justify-content: space-between; gap: 100px"
+          >
+            <h3 style="font-size:medium;">BADMUS AMMAN DARE</h3>
+            <p>EXPIRES 11/99</p>
+          </div>
         </div>
-        <div class="mobile-view">
-            <div class="card-heading">
-                <div style="display: flex; justify-content: space-between; gap: 100px;">
-                  <h3>hello</h3>
-                  <p>hi</p>
+        <form class="input-background">
+          <div class="card-number">
+            <h6>CARD NUMBER</h6>
+            <div class="card-number_box">
+                   <input type="text" name="" id="numberInput" onclick="cardValue()" required/>
+              <input type="text" name="" id="numberInput" required/>
+              <input type="text" name="" id="numberInput" required/>
+              <input type="text" name="" id="numberInput" required/>
+            </div>
+            <div id="displayContent"><p>Card must be numbers*</p></div>
+          </div>
+          <div class="card-holder">
+            <h6>CARD HOLDER</h6>
+            <input type="text" name="" onclick="cardHolder()" required/>
+            <div id="displayHolder"><p>Name must be at least first name, and last name*</p></div>
+          </div>
+          <div class="expiration">
+            <h6>EXPIRATION DATE</h6>
+            <div class="expiration-box">
+              <div style="display: flex; gap: 15px">
+                <div>
+                  <input type="number" name="" id="" required/>
+                  <span
+                    class="material-symbols-outlined"
+                    id="dropdown-btn"
+                    onmouseover="toggleDrop()"
+                    ,
+                    onmouseleave="leaveSecond()"
+                  >
+                    arrow_drop_down
+                  </span>
                 </div>
-                <div style="display: flex; justify-content: space-between; gap: 100px;">
-                  <h3>hello</h3>
-                  <p>hi</p>
+                <div>
+                  <input type="number" name="" id="" required/>
+                  <span
+                    class="material-symbols-outlined"
+                    id="dropdown-btn"
+                    onmouseover="toggleDrop()"
+                    ,
+                    onmouseleave="leaveSecond()"
+                  >
+                    arrow_drop_down
+                  </span>
                 </div>
               </div>
-          <form class="input-background">
-            <div class="card-number">
-              <h6>CARD NUMBER</h6>
-              <div class="card-number_box">
-                <input type="text" name="" id="" />
-                <input type="text" name="" id="" />
-                <input type="text" name="" id="" />
-                <input type="text" name="" id="" />
+              <div class="cvv">
+                <h6>CVV</h6>
+                <input type="number" name="" id="" required/>
               </div>
             </div>
-            <div class="card-holder">
-              <h6>CARD HOLDER</h6>
-              <input type="text" name="" id="" />
+          </div>
+          <input
+            type="submit"
+            value="SUBMIT"
+            style="
+              padding: 10px 150px;
+              margin: auto;
+              font-family: cursive;
+              border: 2px solid gray;
+              border-radius: 5px;
+              background-color: brown;
+              color: white;
+              cursor: pointer;
+            "
+          />
+          <div id="errorMsg"></div>
+        </form>
+      </div>
+      <div class="mobile-view">
+        <div class="card-heading">
+          <div
+            style="
+              display: flex;
+              justify-content: space-between;
+              gap: 100px;
+              margin-top: 10px;
+            "
+          >
+            <div
+              style="
+                border: 7px solid gray;
+                border-radius: 10px;
+                width: 100px;
+                height: 60px;
+              "
+            >
+              <div
+                style="
+                  padding: 25px 20px;
+                  background-color: rgb(71, 66, 66);
+                  border-radius: 10px;
+                "
+              ></div>
             </div>
-            <div class="expiration">
-              <h6>EXPIRATION DATE</h6>
-              <div class="expiration-box">
-                <div style="display: flex;">
-                  <input type="date" name="" id="" />
-                  <input type="date" name="" id="" />
-                </div>
-                <div class="cvv">
-                  <h6>CVV</h6>
-                  <input type="text" name="" id="" />
-                </div>
-              </div>
+            <p
+              style="
+                font-size: 50px;
+                color: white;
+                position: relative;
+                bottom: 7px;
+              "
+            >
+              VISA
+            </p>
+            <div class="master-card">
+              <p>MASTER</p>
             </div>
-            <input type="submit" value="SUBMIT" style="width: 200px;
-            height: 30px; margin: auto;">
-          </form>
+            <div class="american-card">
+              <p>AMERICAN</p>
+            </div>
+          </div>
+          <div
+            style="display: flex; justify-content: space-between; gap: 100px"
+          >
+            <h3 style="font-size: medium;">BADMUS AMMAN DARE</h3>
+            <p>EXPIRES 11/99</p>
+          </div>
         </div>
+        <form class="input-background">
+          <div class="card-number">
+            <h6>CARD NUMBER</h6>
+            <div class="card-number_box">
+              <input type="number" name="" id="" required/>
+              <input type="number" name="" id="" required/>
+              <input type="number" name="" id="" required/>
+              <input type="number" name="" id="" required/>
+            </div>
+          </div>
+          <div class="card-holder">
+            <h6>CARD HOLDER</h6>
+            <input type="text" name="" id="" required/>
+          </div>
+          <div class="expiration">
+            <h6>EXPIRATION DATE</h6>
+            <div class="expiration-box">
+              <div style="display: flex; gap: 2px">
+                <div>
+                  <input type="number" name="" id="" required/>
+                  <span
+                    class="material-symbols-outlined"
+                    id="dropdown-btn"
+                    onmouseover="toggleDrop()"
+                    ,
+                    onmouseleave="leaveSecond()"
+                  >
+                    arrow_drop_down
+                  </span>
+                </div>
+                <div>
+                  <input type="number" name="" id="" required/>
+                  <span
+                    class="material-symbols-outlined"
+                    id="dropdown-btn"
+                    onmouseover="toggleDrop()"
+                    ,
+                    onmouseleave="leaveSecond()"
+                  >
+                    arrow_drop_down
+                  </span>
+                </div>
+              </div>
+              <div class="cvv-mobile">
+                <h6>CVV</h6>
+                <input type="number" name="" id="" required/>
+              </div>
+            </div>
+          </div>
+          <input
+            type="submit"
+            value="SUBMIT"
+            style="
+              padding: 10px 150px;
+              margin: auto;
+              font-family: cursive;
+              border: 2px solid gray;
+              border-radius: 5px;
+              background-color: brown;
+              color: white;
+              cursor: pointer;
+            "
+          />
+        </form>
+      </div>
     </div>
   </body>
   <script src="./index.js"></script>
