update to zuri cdt

--- a/index.html
+++ b/index.html
@@ -150,23 +150,16 @@
                 "
               ></div>
             </div>
-            <p
-              style="
-                font-size: 50px;
-                color: white;
-                position: relative;
-                bottom: 7px;
-              "
-            >
-              VISA
-            </p>
-            <div class="master-card">
-              <p>MASTER</p>
-            </div>
-            <div class="american-card">
-              <p>AMERICAN</p>
-            </div>
+            <img src="./visa-removebg-preview.png" style="position: relative; bottom: 30px; width: 200px; filter:brightness(0) invert(1); "
+            id="logo" ></img>
+           <div class="master-card">
+             <img src="./mastercard-removebg-preview.png" id="logo""></img>
+           </div>
+           <div class="american-card">
+             <img src="./American-Express-Color.png" id="logo"></img>
+           </div>
           </div>
+          <p style="text-align: center; word-spacing:30px; position: relative; bottom:25px;">9999 9999 9999 9999</p>
           <div
             style="display: flex; justify-content: space-between; gap: 100px"
           >
