--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
                 "
               ></div>
             </div>
-              <img src="./visa-removebg-preview.png" style="position: relative; bottom: 30px; width: 200px; filter:brightness(0) invert(1); "
-             id="logo" >
+              <img src="./visa-removebg-preview.png" class="img-visa"
+             id="logo"/>
             </p>
             <div class="master-card">
-              <img src="./mastercard-removebg-preview.png" id="logo""></img>
+              <img src="./mastercard-removebg-preview.png" id="logo""/>
             </div>
             <div class="american-card">
-              <img src="./American-Express-Color.png" id="logo"></img>
+              <img src="./American-Express-Color.png" id="logo"/>
             </div>
           </div>
           <p style="text-align: center; word-spacing:30px; position: relative; bottom:25px;">9999 9999 9999 9999</p>
           <div
             style="display: flex; justify-content: space-between; gap: 100px"
           >
-            <h3 style="font-size:medium;">BADMUS AMMAN DARE</h3>
+            <h3 style="font-size:medium;">BADMUS AMMAN</h3>
             <p>EXPIRES 11/99</p>
           </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="expiration-box">
               <div style="display: flex; gap: 15px">
                 <div>
-                  <input type="number" name="" id="" required/>
+                  <input type="text" name="" id="" required/>
                   <span
                     class="material-symbols-outlined"
                     id="dropdown-btn"
@@ -89,7 +89,7 @@
                   </span>
                 </div>
                 <div>
-                  <input type="number" name="" id="" required/>
+                  <input type="text" name="" id="" required/>
                   <span
                     class="material-symbols-outlined"
                     id="dropdown-btn"
@@ -121,6 +121,7 @@
               cursor: pointer;
             "
           />
+          <div id="successMsg"></div>
           <div id="errorMsg"></div>
         </form>
       </div>
@@ -150,7 +151,7 @@
                 "
               ></div>
             </div>
-            <img src="./visa-removebg-preview.png" style="position: relative; bottom: 30px; width: 200px; filter:brightness(0) invert(1); "
+            <img src="./visa-removebg-preview.png" class="img-visa"
             id="logo" ></img>
            <div class="master-card">
              <img src="./mastercard-removebg-preview.png" id="logo""></img>
