--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             style="display: flex; justify-content: space-between; gap: 100px"
           >
             <h3 style="font-size:medium;">BADMUS AMMAN</h3>
-            <p>EXPIRES 11/99</p>
+            <div style="display: flex; flex-direction: column; position: relative; bottom:10px;">
+              <p>EXPIRES</p>
+              <p>11/99</p>
+            </div>
           </div>
         </div>
         <form class="input-background">
@@ -81,11 +84,14 @@
                   <span
                     class="material-symbols-outlined"
                     id="dropdown-btn"
-                    onmouseover="toggleDrop()"
-                    ,
-                    onmouseleave="leaveSecond()"
+                    onclick="toggleDrop()"
                   >
                     arrow_drop_down
+                    <select id="months">
+                      <option value="January">January</option>
+                      <option value="February">February</option>
+                      <option value="March">March</option>
+                    </select>
                   </span>
                 </div>
                 <div>
@@ -116,7 +122,7 @@
               font-family: cursive;
               border: 2px solid gray;
               border-radius: 5px;
-              background-color: brown;
+              background-image: linear-gradient(rgb(238, 156, 156),brown);
               color: white;
               cursor: pointer;
             "
@@ -165,7 +171,10 @@
             style="display: flex; justify-content: space-between; gap: 100px"
           >
             <h3 style="font-size:15px;">BADMUS AMMAN DARE</h3>
-            <p>EXPIRES 11/99</p>
+            <div style="display: flex; flex-direction: column; position: relative; bottom:10px;">
+              <p>EXPIRES</p>
+              <p>11/99</p>
+            </div>
           </div>
         </div>
         <form class="input-background">
