--- a/index.html
+++ b/index.html
@@ -158,19 +158,20 @@
               ></div>
             </div>
             <img src="./visa-removebg-preview.png" class="img-visa"
-            id="logo" ></img>
-           <div class="master-card">
-             <img src="./mastercard-removebg-preview.png" id="logo""></img>
-           </div>
-           <div class="american-card">
-             <img src="./American-Express-Color.png" id="logo"></img>
-           </div>
+             id="logo"/>
+            </p>
+            <div class="master-card">
+              <img src="./mastercard-removebg-preview.png" id="logo""/>
+            </div>
+            <div class="american-card">
+              <img src="./American-Express-Color.png" id="logo"/>
+            </div>
           </div>
           <p style="text-align: center; word-spacing:30px; position: relative; bottom:25px;">9999 9999 9999 9999</p>
           <div
-            style="display: flex; justify-content: space-between; gap: 100px"
+            style="display: flex; justify-content: space-between; gap:100px"
           >
-            <h3 style="font-size:15px;">BADMUS AMMAN DARE</h3>
+            <h3 style="font-size:15px;">BADMUS AMMAN</h3>
             <div style="display: flex; flex-direction: column; position: relative; bottom:10px;">
               <p>EXPIRES</p>
               <p>11/99</p>
