update to zuri cdt

--- a/index.html
+++ b/index.html
@@ -80,31 +80,49 @@
             <div class="expiration-box">
               <div style="display: flex; gap: 15px">
                 <div>
-                  <input type="text" name="" id="" required/>
-                  <span
+                 
+                    <span
                     class="material-symbols-outlined"
-                    id="dropdown-btn"
-                    onclick="toggleDrop()"
-                  >
+                    id="monthDropdown">
                     arrow_drop_down
-                    <select id="months">
-                      <option value="January">January</option>
-                      <option value="February">February</option>
-                      <option value="March">March</option>
-                    </select>
+                    <select>
+                      <option style="text-align:center;">MM</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                  </select>
                   </span>
+                    
+                  <div id="monthSelection"></div>
+                  <input type="text" name="" id="" required/>
+
                 </div>
                 <div>
-                  <input type="text" name="" id="" required/>
-                  <span
-                    class="material-symbols-outlined"
-                    id="dropdown-btn"
-                    onmouseover="toggleDrop()"
-                    ,
-                    onmouseleave="leaveSecond()"
-                  >
-                    arrow_drop_down
-                  </span>
+                  <select id="monthDropdown">
+                    <option style="text-align:center;">YY</option>
+                    <option value="23">23</option>
+                    <option value=24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value=27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value=30">30</option>
+                    <option value="31">31</option>
+                    <option value="32">32</option>
+                    <option value=33">33</option>
+                    <option value="34">34</option>
+                  </select>
+                  <div id="monthSelection"></div>
                 </div>
               </div>
               <div class="cvv">
@@ -238,7 +256,7 @@
               font-family: cursive;
               border: 2px solid gray;
               border-radius: 5px;
-              background-color: brown;
+              background-image: linear-gradient(rgb(238, 156, 156),brown);
               color: white;
               cursor: pointer;
             "
